; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/lwip/core/extr_netif.c_netif_set_default.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/lwip/core/extr_netif.c_netif_set_default.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.netif = type { i8* }

@netif_default = common dso_local global %struct.netif* null, align 8
@NETIF_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [39 x i8] c"netif: setting default interface %c%c\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @netif_set_default(%struct.netif* %0) #0 {
  %2 = alloca %struct.netif*, align 8
  store %struct.netif* %0, %struct.netif** %2, align 8
  %3 = load %struct.netif*, %struct.netif** %2, align 8
  store %struct.netif* %3, %struct.netif** @netif_default, align 8
  %4 = load i32, i32* @NETIF_DEBUG, align 4
  %5 = load %struct.netif*, %struct.netif** %2, align 8
  %6 = icmp ne %struct.netif* %5, null
  br i1 %6, label %7, label %14

7:                                                ; preds = %1
  %8 = load %struct.netif*, %struct.netif** %2, align 8
  %9 = getelementptr inbounds %struct.netif, %struct.netif* %8, i32 0, i32 0
  %10 = load i8*, i8** %9, align 8
  %11 = getelementptr inbounds i8, i8* %10, i64 0
  %12 = load i8, i8* %11, align 1
  %13 = sext i8 %12 to i32
  br label %15

14:                                               ; preds = %1
  br label %15

15:                                               ; preds = %14, %7
  %16 = phi i32 [ %13, %7 ], [ 39, %14 ]
  %17 = load %struct.netif*, %struct.netif** %2, align 8
  %18 = icmp ne %struct.netif* %17, null
  br i1 %18, label %19, label %26

19:                                               ; preds = %15
  %20 = load %struct.netif*, %struct.netif** %2, align 8
  %21 = getelementptr inbounds %struct.netif, %struct.netif* %20, i32 0, i32 0
  %22 = load i8*, i8** %21, align 8
  %23 = getelementptr inbounds i8, i8* %22, i64 1
  %24 = load i8, i8* %23, align 1
  %25 = sext i8 %24 to i32
  br label %27

26:                                               ; preds = %15
  br label %27

27:                                               ; preds = %26, %19
  %28 = phi i32 [ %25, %19 ], [ 39, %26 ]
  %29 = sext i32 %28 to i64
  %30 = inttoptr i64 %29 to i8*
  %31 = call i32 @LWIP_DEBUGF(i32 %4, i8* %30)
  ret void
}

declare dso_local i32 @LWIP_DEBUGF(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
